[gd_scene load_steps=7 format=3 uid="uid://bpkulwqmj3kec"]

[ext_resource type="Script" path="res://src/scripts/Lesson/Prelim/Prelim_1.12.gd" id="1_368au"]
[ext_resource type="Texture2D" uid="uid://byio0luq7uppw" path="res://assets/images/Background/StarField.png" id="2_qn0r3"]
[ext_resource type="PackedScene" uid="uid://r7v4w30c0k7l" path="res://src/scenes/Components/Pause.tscn" id="3_blowf"]
[ext_resource type="PackedScene" uid="uid://c8lo8combalxg" path="res://src/scenes/Components/NavigationControls.tscn" id="4_k5nux"]
[ext_resource type="Texture2D" uid="uid://cev5sk22ovfpv" path="res://assets/images/Lesson/Prelim/prelim_1.12.png" id="5_p8kd5"]
[ext_resource type="PackedScene" uid="uid://c7pggom3bb7tm" path="res://src/scenes/Components/ZoomableImage.tscn" id="5_vnwjp"]

[node name="Prelim1_12" type="Node2D"]
script = ExtResource("1_368au")

[node name="StarField" type="Sprite2D" parent="."]
position = Vector2(963.999, 541.998)
scale = Vector2(1.88281, 1.05859)
texture = ExtResource("2_qn0r3")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 68.0
offset_top = 220.0
offset_right = 1425.0
offset_bottom = 1077.0
theme_override_constants/separation = 30

[node name="Header" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 80
text = "Rich Text"
fit_content = true

[node name="DetailOne" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="DetailTwo" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="ZoomableImage" parent="." instance=ExtResource("5_vnwjp")]
offset_right = 400.0
offset_bottom = 350.0
image_texture = ExtResource("5_p8kd5")
metadata/_edit_use_anchors_ = true

[node name="ImageContainer" parent="ZoomableImage" index="0"]
offset_left = 658.0
offset_top = 54.0
offset_right = 2578.0
offset_bottom = 1134.0

[node name="ImageButton" parent="ZoomableImage/ImageContainer" index="0"]
anchor_top = 0.456
anchor_bottom = 0.456
offset_left = -212.0
offset_top = -150.48
offset_right = 188.0
offset_bottom = 149.52
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1, 0.907966)

[node name="FullScreenOverlay" parent="ZoomableImage" index="1"]
visible = false

[node name="NavigationControls" parent="." instance=ExtResource("4_k5nux")]
visible = false
scale = Vector2(0.993989, 1)
manual_page_number = 12
previous_scene_path = "res://src/scenes/Lesson/Prelim/Prelim_1.11.tscn"
next_scene_path = "res://src/scenes/Lesson/Prelim/Prelim_1.13.tscn"

[node name="Pause" parent="." instance=ExtResource("3_blowf")]

[editable path="ZoomableImage"]
